use spinner instead of flash notice
when saving notification preferences, show a spinny icon rather than
(potentially) stacking flash notices

test plan:
1. go to the new notifications page
2. change a preference
3. note the spinner in the top right

Change-Id: I155f3a7c9383c2cac51b2c277ddf529311343ea0
Reviewed-on: https://gerrit.instructure.com/12531
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Zach Wily <zach@instructure.com>

--- a/app/stylesheets/notification_preferences.sass
+++ b/app/stylesheets/notification_preferences.sass
@@ -137,3 +137,11 @@ $hover_row: #F5F5F5
     td.comm-event-option[data-selection='never'] .event-option-selection a.change-selection span
       opacity: 0.35
 
+h2
+  position: relative
+  #notifications_save_status
+    position: absolute
+    right: 0
+    top: 0
+    width: 40px
+    height: 40px
