--- a/app/views/profile/communication.html.erb
+++ b/app/views/profile/communication.html.erb
@@ -15,7 +15,7 @@
   </style>
 <% end %>
 
-<h2><%= t('headers.notification_preferences', 'Notification Preferences') %></h2>
+<h2><%= t('headers.notification_preferences', 'Notification Preferences') %><i id="notifications_save_status"></i></h2>
 
 <div id='notification-preferences'>
 </div>
