Update NotificationPolicy setting for all notifications in category. Refs #8066, refs #9643.
Fix notification problem where making a 'category' frequency change
did not change the settings for all the notification events in the category.
Changed notification check box text per product's request.
Added new unit-test spec for updating multiple notification settings
for the same shared category.

Testing notes:
==============
Multiple Notifications in the same category should be updated when
the category displayed is changed. For instance, "Due Date" has
two notifications in that category.

One is "Assignment Due Date Changed" and the other is "Assignment Created".

There are two different ways to verify this. One is more technical but
easier to verify. The other is all UI driven but more complicated.

Technical Approach
------------------
* Find all notification IDs in the category "Due Date":

    id_list = Notification.find_all_by_category('Due Date').map(&:id)

* Find the CommunicationChannel for a given email address:

    channel = CommunicationChannel.find_by_path_and_path_type('jimbo@instructure.com', 'email')

* Find the NotificationPolicy entries for the category and channel:

    channel.notification_policies.scoped(:conditions => {:notification_id => id_list}).all

* Make a change to "/profile/communication" settings for "Due Date".
* Re-run the last query for listing the 2 NotificationPolicy entries. They should
  both be updated to have the new frequency.

Non-Technical Approach
----------------------
* Make a change to trigger each event in the "Due Date" group. (listed above in Testing Notes).
* Verify that changing "Due Date" to a setting like "Daily" and triggering
  the event that the notification is done as "Daily".
* Change the category frequency to something like "ASAP" and trigger the two events
  in the category and verify that both are respected as "Immediate/ASAP".

Change-Id: I9e0473c92206b2ec43ba1c1a6a0ec4c62cdae115
Reviewed-on: https://gerr

--- a/app/views/jst/profiles/notifications/_policy_cell.handlebars
+++ b/app/views/jst/profiles/notifications/_policy_cell.handlebars
@@ -1,4 +1,4 @@
-<td class='comm-event-option' data-selection='{{selected.code}}' data-categoryId='{{categoryId}}' data-channelId='{{channelId}}'>
+<td class='comm-event-option' data-selection='{{selected.code}}' data-category='{{category}}' data-channelId='{{channelId}}'>
   <div class='comm-event-option-contents'>
     <div class='event-option-selection'>
       <a href="#" class='change-selection'>
