don't require email validation on confirmation page, fixes #9591
since we have already "validated" the email (by virtue of them receiving
it and clicking on a link), we don't need to validate it here. fixes an
issue where users with non-email pseudonyms could not get past this page

also tweak form so that pseudonym can be specified if it needs to be set
(for example, the email was already taken by another user)

test plan:
1. as an admin create a new user with a login other than their email
   address
2. check the user's /messages URL to see the email that was sent to the
   user
3. copy and paste the URL that was sent in the email and navigate to it
4. the registration page should allow you to proceed and the label should
   say "Login"

Change-Id: I563b53b16b950bd7f6dafc456349db74fd97b294
Reviewed-on: https://gerrit.instructure.com/12569
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Zach Pendleton <zachp@instructure.com>

--- a/app/views/communication_channels/confirm.html.erb
+++ b/app/views/communication_channels/confirm.html.erb
@@ -107,9 +107,13 @@ Which is you?", :count => @merge_opportunities.length %>
       <%= (error_messages_for :object => [@user, @pseudonym], :header_message => nil).gsub("Unique", "Login") %>
       <input type="hidden" name="register" value="1"/>
       <div class="control-group">
-        <%= form.blabel :unique_id, :en => "Email Address", :class => 'control-label' %>
+        <%= form.blabel :unique_id, :en => "Login", :class => 'control-label' %>
         <div class="controls" style="padding-top: 5px">
-          <%= @pseudonym.unique_id %>
+          <% if @pseudonym.unique_id.blank? || @pseudonym.errors && @pseudonym.errors[:unique_id] %>
+            <%= form.text_field :unique_id %>
+          <% else %>
+            <%= @pseudonym.unique_id %>
+          <% end %>
         </div>
       </div>
       <div class="control-group">
