fix jumping flash notices, fixes #9629
fix issue where flash notice is pinned to the left while it slides down
and then jumps to the middle. there seems to be a difference in how
browsers treat auto margins wrt widths and nested relative elements. we
just make sure everything that might need it gets an auto margin

test plan:
1. do something that generates a flash notice or error (e.g. send a
   message in conversations)
2. it should slide down from the top middle
3. this should work in all supported browsers (ie/ff/chrome/etc)

Change-Id: I6835b932bf057ec6083899a94fefb680b6836419
Reviewed-on: https://gerrit.instructure.com/12585
Reviewed-by: Ryan Shaw <ryan@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/stylesheets/g_instructure.sass
+++ b/app/stylesheets/g_instructure.sass
@@ -27,10 +27,11 @@
   margin: 0
   padding: 0
   height: 0
+  li, .ui-effects-wrapper
+    margin: 0 auto !important
   li
     box-shadow: 0 1px 1px rgba(0,0,0,0.25)
     border-bottom-color: rgba(0,0,0,0.5)
-    margin: 0
     padding: 4px 40px 4px 8px
     min-height: 20px
     vertical-align: middle
@@ -39,10 +40,8 @@
     position: relative
     z-index: 2
     width: 400px
-    margin: 0 auto
     &.static_message
       width: auto
-      margin: 0
     a.close_link
       position: absolute
       right: 10px
