fix add event/assignment menu in calendar2. fixes #9609
previously menu was being positioned against #main div and not its
parent #right-side div, causing it to be hidden by the overflow
of the calendar list. the popup now displays properly.

test plan:
  * open calendar2;
  * in the right sidebar, hover over a calendar in the list and
    click the gear button;
  * verify that the add event/assignment menu appears.

Change-Id: I1fc6b6d7b0eeb0602af04803e2e2b4c9e1f30ddb
Reviewed-on: https://gerrit.instructure.com/12622
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Jon Jensen <jon@instructure.com>

--- a/app/stylesheets/calendar/sidebar.sass
+++ b/app/stylesheets/calendar/sidebar.sass
@@ -28,6 +28,8 @@
     height: 20px
     position: relative
 
+.ui-kyle-menu li
+  min-width: 95px
 
 #calendar-feed-message
   background: url('/images/ical_big.png') no-repeat top left
