paginate course people page w/ ajax. fixes #9678
return students and teachers/TAs 50 users at a time, and
display them in an infinitely scrolling div. also update
the styling of the scrolling divs to better reflect that they
are scrollable to users w/o permanent scrollbars (e.g. OS X).

test plan:
  * create a course with over 50 student or teacher/ta
    enrollments;
  * view the course people page and verify that student
    and teacher enrollments load as expected;
  * scroll the field with the most enrollments and verify
    that when the bottom is reached more enrollments load;
  * verify that when all enrollments have loaded, the div
    no longer attempts to load new enrollments;
  * create a new course section and add enrollments to it;
  * as a user with permissions limited to section, verify
    that only enrollments in the allowed section are
    displayed.

Change-Id: I2e6485a2edf950acf58f5ccbc75c2965297aed04
Reviewed-on: https://gerrit.instructure.com/12680
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Zach Pendleton <zachp@instructure.com>

--- a/app/stylesheets/course_settings.sass
+++ b/app/stylesheets/course_settings.sass
@@ -16,7 +16,8 @@
 .users-wrapper
   border: 1px solid #CCC
   margin-bottom: 1.4em
-  h3
+  h3, .h3
+    font-size: 18px
     margin: 0
     padding: 8px
     background-color: #F7F7F7
@@ -439,3 +440,4 @@ h3 .tally
 
 #right-side table.summary
   margin-top: 20px
+
