--- a/app/views/shared/_login.html.erb
+++ b/app/views/shared/_login.html.erb
@@ -101,7 +101,7 @@ $(document).ready(function() {
         </div>
         <div>
           <div class="login-options">
-            <%= f.check_box :remember_me %> <%= f.label :remember_me, :en => "Stay signed in" %>
+            <%= f.check_box :remember_me, :checked => session[:used_remember_me_token] %> <%= f.label :remember_me, :en => "Stay signed in" %>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <% url = (params[:canvas_login] != '1' && @domain_root_account.try(:forgot_password_external_url)) || "#" %><br />
             <%= link_to t('dont_know_password', "Don't know your password?"), url, :class => (url != '#' ? "not_external" : "forgot_password_link"), :id => "login_forgot_password" %>
