don't use ie filter gradients on modal/login boxes, fixes #9703
fixes issue where account-specific css was not being respected, since ie's
filter gradients trump the backgrounds customers were setting.

known side effect: in ie, the unstyled login page now has a solid
background instead of a gradient

test plan:
1. go to the unstyled login page in non-ie. it should have the gray
   gradient
2. go to the unstyled login page in ie. it should have a solid gray
   background
3. go to a styled login page (global css) in non-ie. it should respect the
   background override
4. go to a styled login page (global css) in ie. it should respect the
   background override

Change-Id: Ie6885fde9df41a1b518dbc8d5e872801a035fa2a
Reviewed-on: https://gerrit.instructure.com/12639
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Zach Pendleton <zachp@instructure.com>

--- a/app/stylesheets/login.sass
+++ b/app/stylesheets/login.sass
@@ -47,7 +47,7 @@ body.modal
     border-top-color: #ccc
     width: $modal_box_width - (2 * $modal_box_padding)
     padding: 2 * $modal_box_padding
-    @include vertical-gradient(#f4f4f4, #e2e2e2)
+    @include vertical-gradient-no-ie(#f4f4f4, #e2e2e2)
     .bootstrap-form
       p.instructions
         font-weight: bold
@@ -70,7 +70,7 @@ body.modal
         border-bottom: 1px solid #fff
         height: 0
     &.login-box
-      @include vertical-gradient(#59656e, #3e464c)
+      background-color: #4B555D
       @include background(image-url("/images/Money_Noise_tm.png"), radial-gradient(50% -100px, circle cover, rgba(255, 255, 255, 0.6) 0%, transparent 100%), linear-gradient(top, #59656e, #3e464c))
       height: 331px
       width: $modal_box_width
