--- a/app/stylesheets/base/_layout.sass
+++ b/app/stylesheets/base/_layout.sass
@@ -90,6 +90,16 @@ body
     max-width: none
 
 
+// This hides stuff till the javascript has done it's stuff
+.hide-content-while-scripts-not-loaded
+  #content, #right-side-wrapper
+    +single-transition(opacity, 0.3s)
+    +opacity(1)
+.scripts-not-loaded
+  #content, #right-side-wrapper
+    +opacity(0)
+
+
 // **********************************************************************************
 // end classes applied to body
 
