--- a/app/stylesheets/discussions.sass
+++ b/app/stylesheets/discussions.sass
@@ -64,6 +64,8 @@
     padding-left: 5px
   h1.discussion-title
     font-size: 19px
+  h2.discussion-title
+    font-size: 16px
 
 .discussion-title
   font-size: 13px
@@ -292,3 +294,4 @@
   margin-top: 0px
   margin-left: 20px
   box-shadow: none
+
