--- a/app/views/calendars/show2.html.erb
+++ b/app/views/calendars/show2.html.erb
@@ -10,7 +10,7 @@
   js_bundle :calendar2
   jammit_css :calendar2
   crumbs.clear
-  @body_classes << "full-width no-page-block"
+  @body_classes << "full-width no-page-block hide-content-while-scripts-not-loaded"
 %>
 
 <% content_for :auto_discovery do %>
