--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -14,7 +14,7 @@
     <% if can_do(@context, @current_user, :manage_content) %>
       <div class="rs-margin-lr rs-margin-top rs-margin-bottom">
         <a href="#" class="button button-sidebar-wide wizard_popup_link  <%= 'auto_open' if @context.created? || @context.claimed? %>"><%= image_tag "help.png" %> <%= t('links.course_setup', %{Course Setup Checklist}) %></a>
-        <a class="button button-sidebar-wide" href="<%= context_url(@context, :controller => :announcements) %>#new"><%= image_tag "add.png" %> <%= t('links.new_announcement', %{New Announcement}) %></a>
+        <a class="button button-sidebar-wide" href="<%= context_url(@context, :new_context_discussion_topic_url, :is_announcement => true) %>"><%= image_tag "add.png" %> <%= t('links.new_announcement', %{New Announcement}) %></a>
       </div>
     <% end %>
     <% if @context.available? && @context.self_enrollment && @context.open_enrollment && (!@context_enrollment || !@context_enrollment.active?) && !session["role_course_#{@context.id}"] %>
