--- a/app/views/discussion_topics/show.html.erb
+++ b/app/views/discussion_topics/show.html.erb
@@ -20,18 +20,12 @@
     <div id="sidebar_content" class="rs-margin-all">
       <% if @topic.locked? %>
         <% if can_do(@context, @current_user, :moderate_forum) %>
-          <% form_for @topic, :url => context_url(@context, :context_discussion_topic_url, @topic.id), :html => {:method => :put} do |f| %>
-            <input type="hidden" name="discussion_topic[event]" value="unlock"/>
-            <button type="submit" class="button button-sidebar-wide"><%= image_tag('unlock.png') %><%= t(:unlock_topic, %{Re-Open for Comments}) %></button>
-          <% end %>
+          <button data-mark-locked="false" class="discussion_locked_toggler button button-sidebar-wide"><%= image_tag('unlock.png') %><%= t(:unlock_topic, %{Re-Open for Comments}) %></button>
         <% else %>
           <p><%= image_tag 'lock.png' %><%= t :topic_locked_notice, "This topic is closed for comments." %></p>
         <% end %>
       <% elsif can_do(@context, @current_user, :moderate_forum) && (!@topic.assignment.try(:due_at) || @topic.assignment.due_at <= Time.now) %>
-        <% form_for @topic, :url => context_url(@context, :context_discussion_topic_url, @topic.id), :html => {:method => :put} do |f| %>
-          <input type="hidden" name="discussion_topic[event]" value="lock"/>
-          <button type="submit" class="button button-sidebar-wide"><%= image_tag('lock.png') %> <%= t(:lock_topic, %{Close for Comments}) %></button>
-        <% end %>
+        <button data-mark-locked="true" class="discussion_locked_toggler button button-sidebar-wide"><%= image_tag('lock.png') %> <%= t(:lock_topic, %{Close for Comments}) %></button>
       <% end %>
       <a id="jump_to_next_unread" class="button button-sidebar-wide disabled"><%= image_tag('discussions/next_unread_icon.png') %> Jump to Next Unread</a>
       <select class="view_switcher" style="display:none;">
@@ -71,7 +65,7 @@
               <button class="al-trigger ui-button" data-kyle-menu-options='{"appendMenuTo": "body"}'><span class="al-trigger-inner"><%= t :manage, 'Manage' %></span></button>
               <ul class="al-options">
                 <% if can_do(@topic, @current_user, :update) %>
-                  <li><a href="<%= context_url(@topic.context, :context_discussion_topics_url, :anchor => "edit_topic_#{@topic.id}") %>"><span class="ui-icon ui-icon-pencil"></span><%= t :edit, 'Edit' %></a></li>
+                  <li><a href="<%= context_url(@topic.context, :edit_context_discussion_topic_url, @topic) %>"><span class="ui-icon ui-icon-pencil"></span><%= t :edit, 'Edit' %></a></li>
                 <% end %>
                 <% if @topic.for_assignment? && (can_do(@topic.assignment, @current_user, :grade) || can_do(@topic.assignment.context, @current_user, :manage_assignments)) %>
                   <li><a href="<%= context_url(@topic.assignment.context, :edit_context_assignment_url, @topic.assignment.id, :return_to => request.url) %>"><span class="ui-icon ui-icon-pencil"></span><%= t :assignment_settings, 'Assignment Details' %></a></li>
@@ -178,10 +172,10 @@
               </ul>
             </p>
           <% end %>
-          <% 
+          <%
             can_grade = can_do(@topic.assignment, @current_user, :grade) || can_do(@topic.assignment.context, @current_user, :manage_assignments)
             show_peer_reviews = can_do(@topic.assignment, @current_user, :grade) && @topic.assignment.has_peer_reviews?
-            attached_rubric =  @topic.assignment.try(:rubric_association).try(:rubric) 
+            attached_rubric =  @topic.assignment.try(:rubric_association).try(:rubric)
             show_rubric = attached_rubric || can_do(@topic.assignment, @current_user, :update)
            %>
            <% if can_grade || show_peer_reviews || show_rubric %>
