--- a/app/views/shared/_select_content_dialog.html.erb
+++ b/app/views/shared/_select_content_dialog.html.erb
@@ -264,8 +264,8 @@
         </div>
         <div class="new" style="margin-top: 5px;">
           <%= before_label :topic_name, "Topic Name" %>
-          <input type="text" name="discussion_topic[title]" class="item_title"/>
-          <a href="<%= context_url(@context, :context_discussion_topics_url) %>" style="display: none;" class="add_item_url">&nbsp;</a>
+          <input type="text" name="title" class="item_title"/>
+          <a href="<%= context_url(@context, :api_v1_context_discussion_topics_url) %>" style="display: none;" class="add_item_url">&nbsp;</a>
         </div>
       </div>
       <% end %>
