--- a/app/stylesheets/base/_#left-side.sass
+++ b/app/stylesheets/base/_#left-side.sass
@@ -1,7 +1,7 @@
 #left-side
   float: left
   width: $left_side_width
-  border-bottom: solid 1px #ddd
+  border-bottom: solid 1px #ccc
   display: none
 
 #section-tabs li.hidden a
