--- a/app/stylesheets/base/_#right-side.sass
+++ b/app/stylesheets/base/_#right-side.sass
@@ -21,8 +21,8 @@
     font-size: 14px
     color: $gray
     font-weight: bold
-    border-bottom: solid 1px $grayLight
-    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.85)
+    border-bottom: solid 1px #bbb
+    box-shadow: 0 1px 0 white
     margin: $right_side_margin 0 0
 
 .rs-match-list-indent
@@ -45,7 +45,7 @@
       font-size: 12px
       padding: 0 4px 0 24px
       display: block
-      border-bottom: 1px solid #ddd
+      border-bottom: 1px solid #d6d6d6
       box-shadow: 0 1px 0 rgba(255, 255, 255, 0.85)
 
       &:hover, &:focus
