multi-factor authentication closes #9532
test plan:
 * enable optional MFA, and check the following:
   * normal log in should not be affected
   * you can enroll in MFA from your profile page
   * you can re-enroll in MFA from your profile page
   * you can disable MFA from your profile page
   * MFA can be reset by an admin on your user page
   * when enrolled, you are asked for verification code after
     username/password when logging in
   * you can't access any other part of the site directly until
     until entering your verification code
 * enable required MFA, and check the following
   * when not enrolled in MFA, and you log in, you are forced to
     enroll
   * you cannot disable MFA from your profile page
   * you can re-enroll in MFA from your profile page
   * an admin (other than himself) can reset MFA from the user page
 * for enrolling in MFA
   * use Google Authenticator and scan the QR code; you should have
     30-seconds or so of extra leeway to enter your code
   * having no SMS communication channels on your profile, the
     enrollment page should just have a form to add a new phone
   * having one or more SMS communication channels on your profile,
     the enrollment page should list them, or allow you to create
     a new one (and switch back)
   * having more than one SMS communication channel on your profile,
     the enrollment page should remember which one you have selected
     after you click "send"
   * an unconfirmed SMS channel should go to confirmed when it's used
     to enroll in MFA
   * you should not be able to go directly to /login/otp to enroll
     if you used "Remember me" token to log in
 * MFA login flow
   * if configured with SMS, it should send you an SMS after you
     put in your username/password; you should have about 5 minutes
     of leeway to put it in
   * if you don't check "remember computer" checkbox, you should have
     to enter a verification code each time you log in
   * if you do check it, you s

--- a/app/views/accounts/settings.html.erb
+++ b/app/views/accounts/settings.html.erb
@@ -97,8 +97,18 @@
                   <%= f.time_zone_select :default_time_zone, ActiveSupport::TimeZone.us_zones %>
                 </td>
               </tr>
-              <% unless @account.site_admin? %>
-                <% f.fields_for :settings do |settings| %>
+              <% f.fields_for :settings do |settings| %>
+                <% if Account.site_admin.grants_right?(@current_user, :manage_site_settings) %>
+                  <tr>
+                    <td><%= settings.blabel :mfa_settings, :en => "Multi-Factor Authentication" %></td>
+                    <td><%= settings.select :mfa_settings, [[t('select.mfa.disabled', "Disabled"), :disabled],
+                                                            [t('select.mfa.optional', "Optional"), :optional],
+                                                            [t('select.mfa.required_for_admins', "Required for Admins"), :required_for_admins],
+                                                            [t('select.mfa.required', "Required"), :required]], :selected => @account.mfa_settings %>
+                    </td>
+                  </tr>
+                <% end %>
+                <% unless @account.site_admin? %>
                   <tr>
                     <td><%= settings.blabel :self_enrollment, :en => "Allow Self-Enrollment" %></td>
                     <td>
