--- a/app/views/profile/_ways_to_contact.html.erb
+++ b/app/views/profile/_ways_to_contact.html.erb
@@ -102,7 +102,9 @@
         <% if c.state == :unconfirmed && (@user.grants_right?(@current_user, nil, :manage_user_details) || (@real_current_user && @user.grants_right?(@real_current_user, nil, :manage_user_details))) %>
             <a href="<%= registration_confirmation_url(c.confirmation_code) %>" class="confirm_channel_link no-hover"><%= image_tag "pass.png", :title => t('titles.confirm_email_address', "Confirm Email Address") %></a>
         <% end %>
-        <a href="<%= communication_channel_url(c.id) %>" class="delete_channel_link no-hover"><%= image_tag "delete.png", :title => t('titles.remove_email_address', "Remove email address"), :style => (c.first?) ? "display: none;" : "" %></a>
+        <% unless c.id == c.user.otp_communication_channel_id %>
+          <a href="<%= communication_channel_url(c.id) %>" class="delete_channel_link no-hover"><%= image_tag "delete.png", :title => t('titles.remove_email_address', "Remove email address"), :style => (c.first?) ? "display: none;" : "" %></a>
+        <% end %>
         <span class="pseudonym_id" style="display: none;"><%= c.pseudonym_id %></span>
         <span class="channel_id" style="display: none;"><%= c.id %></span>
         <span class="user_id" style="display: none;"><%= c.user_id %></span>
@@ -170,17 +172,9 @@
     <td>
       <select class="user_selected carrier">
         <option value="other"><%= t(:default_carrier_option, "[Select Carrier]") %></option>
-        <option value="#@txt.att.net"><%= t('carriers.a_t_and_t', "AT&T") %></option>
-        <option value="#@message.alltel.com"><%= t('carriers.alltel', "Alltel") %></option>
-        <option value="#@myboostmobile.com"><%= t('carriers.boost', "Boost") %></option>
-        <option value="#@cingularme.com"><%= t('carriers.cingular', "Cingular") %></option>
-        <option value="#@mobile.celloneusa.com"><%= t('carriers.cellular_one', "CellularOne") %></option>
-        <option value="#@sms.mycricket.com"><%= t('carriers.cricket', "Cricket") %></option>
-        <option value="#@messaging.nextel.com"><%= t('carriers.nextel', "Nextel") %></option>
-        <option value="#@messaging.sprintpcs.com"><%= t('carriers.sprint_psc', "Sprint PCS") %></option>
-        <option value="#@tmomail.net"><%= t('carriers.t_mobile', "T-Mobile") %></option>
-        <option value="#@vtext.com"><%= t('carriers.verizon', "Verizon") %></option>
-        <option value="#@vmobl.com"><%= t('carriers.virgin_mobile', "Virgin Mobile") %></option>
+        <% CommunicationChannel.sms_carriers.each do |(carrier, domain)| %>
+          <option value="#@<%= domain %>"><%= carrier %></option>
+        <% end %>
         <option value="other"><%= t('carriers.other', "Other Carrier") %></option>
       </select>
     </td>
