don't let kylemenu cog shrink in firefox, fixes #9714
Test Plan:
- Open Firefox
- Go to the Users tab of the Settings page for a course that has people enrolled in it
- Check to see that the cog button on the right of a user entry does not change size when clicked

Change-Id: Ic33d8e44a53c8155c1f4c77cd5e660b181b509bd
Reviewed-on: https://gerrit.instructure.com/12703
Reviewed-by: Jon Jensen <jon@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/views/info/styleguide.html.erb
+++ b/app/views/info/styleguide.html.erb
@@ -207,7 +207,7 @@
   <h2>Admin Links</h2>
   <div class="admin-link-hover-area">
     <div class="admin-links">
-      <button class="al-trigger"><span class="al-trigger-inner">Manage (will be accessibly hidden)</span></button>
+      <button class="al-trigger ui-button"><span class="al-trigger-inner">Manage (will be accessibly hidden)</span></button>
       <ul class="al-options">
         <li><a href="#"><span class="ui-icon ui-icon-pencil"></span>Edit</a></li>
         <li><a href="#"><span class="ui-icon ui-icon-trash"></span>Delete (from database)</a></li>
@@ -220,7 +220,7 @@
       <pre class="prettyprint linenums">
       &lt;div class=&quot;admin-link-hover-area&quot;&gt;
         &lt;div class=&quot;admin-links&quot;&gt;
-          &lt;button class=&quot;al-trigger&quot;&gt;&lt;span class=&quot;al-trigger-inner&quot;&gt;Manage (will be accessibly hidden)&lt;/span&gt;&lt;/button&gt;
+          &lt;button class=&quot;al-trigger ui-button&quot;&gt;&lt;span class=&quot;al-trigger-inner&quot;&gt;Manage (will be accessibly hidden)&lt;/span&gt;&lt;/button&gt;
           &lt;ul class=&quot;al-options&quot;&gt;
             &lt;li&gt;&lt;a href=&quot;#&quot;&gt;&lt;span class=&quot;ui-icon ui-icon-pencil&quot;&gt;&lt;/span&gt;Edit&lt;/a&gt;&lt;/li&gt;
             &lt;li&gt;&lt;a href=&quot;#&quot;&gt;&lt;span class=&quot;ui-icon ui-icon-trash&quot;&gt;&lt;/span&gt;Delete (from database)&lt;/a&gt;&lt;/li&gt;
