--- a/app/views/jst/courses/settings/UserView.handlebars
+++ b/app/views/jst/courses/settings/UserView.handlebars
@@ -1,5 +1,5 @@
 <div class="admin-links">
-  <button class="al-trigger"><span class="al-trigger-inner">{{#t "manage"}}Manage{{/t}}</span></button>
+  <button class="al-trigger ui-button"><span class="al-trigger-inner">{{#t "manage"}}Manage{{/t}}</span></button>
   <ul class="al-options">
     <li><a href="#" data-event="resendInvitation"><span class="ui-icon ui-icon-mail-closed" />{{#t "links.resend_invitation"}}Resend Invitation{{/t}}</a></li>
     {{#if isObserver}}
