don't display end course button for soft-concluded courses.
fixes #7537

on the course settings page, users should not see the 'end
this course' button if the course has already soft-concluded
(e.g. a course whose end date has passed).

this commit also moves the settings sidebar into a partial.

test plan:
  * create a course with an end date that is in the past;
  * visit the course settings page and verify that the end
    course button is not visible in the sidebar;
  * remove the end at date or set it to the future and verify
    that the end course button appears.

Change-Id: I0eb8fb79c6f59748d0ef3c63ec6ffcb81106520b
Reviewed-on: https://gerrit.instructure.com/12709
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Mark Ericksen <marke@instructure.com>

--- a/app/stylesheets/course_settings.sass
+++ b/app/stylesheets/course_settings.sass
@@ -436,3 +436,9 @@ h3 .tally
 #edit_sections
   a.browser
     background: transparent url(/images/messages/context-search-sprite.png) 0 0 no-repeat
+
+#right-side table.summary
+  margin-top: 20px
+
+.hidden
+  display: none
