removed glow on gradebook cell inputs
Change-Id: I66b3cd67ea8afe670e2853d739fca9cd22abec66
Reviewed-on: https://gerrit.instructure.com/12713
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Shaw <ryan@instructure.com>

--- a/app/stylesheets/gradebook2.sass
+++ b/app/stylesheets/gradebook2.sass
@@ -285,6 +285,7 @@ $cell_height: 33px
     padding: 0
     margin: 0
     background: none
+    box-shadow: none !important
   .grade::-webkit-outer-spin-button
     display: none
 .gradebook-cell-out-of-formatter
