--- a/app/views/jst/courses/settings/UserView.handlebars
+++ b/app/views/jst/courses/settings/UserView.handlebars
@@ -5,10 +5,12 @@
     {{#if isObserver}}
     <li><a href="#" data-event="linkToStudents"><span class="ui-icon ui-icon-link" />{{#t "links.link_to_students"}}Link to Students{{/t}}</a></li>
     {{else}}
-    <li><a href="#" data-event="editSections"><span class="ui-icon ui-icon-pencil" />{{#t "links.edit_sections"}}Edit Sections{{/t}}</a></li>
+      {{#unless isDesigner}}
+      <li><a href="#" data-event="editSections"><span class="ui-icon ui-icon-pencil" />{{#t "links.edit_sections"}}Edit Sections{{/t}}</a></li>
+      {{/unless}}
     {{/if}}
     <li><a href="{{url}}"><span class="ui-icon ui-icon-person" />{{#t "links.user_details"}}User Details{{/t}}</a></li>
-    {{#if permissions.manage_students}}
+    {{#if canRemove}}
     <li class="ui-menu-item"><hr /></li>
     <li><a href="#" data-event="removeFromCourse"><span class="ui-icon ui-icon-trash" />{{#t "links.remove_from_course"}}Remove From Course{{/t}}</a></li>
     {{/if}}
