fixup failing specs and add temporary plugin shims
the shims will be removed in a later commit. that commit will need to
wait for the plugins to be fixed before it can be submitted.

test-plan:
 - specs pass

Change-Id: Ifd6e2a254f0272a58d507c845cdae58b7392801c
Reviewed-on: https://gerrit.instructure.com/12798
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Jacob Fugal <jacob@instructure.com>

--- a/app/views/outcomes/_outcome_group.html.erb
+++ b/app/views/outcomes/_outcome_group.html.erb
@@ -26,10 +26,10 @@
     <div style="display: block; height: 10px;"></div>
     <div class="child_outcomes">
       <% if outcome_group %>
-        <% outcome_group.child_outcome_groups.each do |group| %>
+        <% outcome_group.child_outcome_groups.active.sort_by{ |g| g.title }.each do |group| %>
           <%= render :partial => "outcome_group", :object => group %>
         <% end %>
-        <% outcome_group.child_outcome_links.each do |link| %>
+        <% outcome_group.child_outcome_links.active.sort_by{ |l| l.content.title }.each do |link| %>
           <%= render :partial => "outcome", :object => link %>
         <% end %>
       <% end %>
