put some padding on calendar events
Change-Id: I0332b71ec68b71aeda64ed24d29843e832d65d54
Reviewed-on: https://gerrit.instructure.com/12780
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Joe Tanner <joe@instructure.com>

--- a/app/stylesheets/Calendar.sass
+++ b/app/stylesheets/Calendar.sass
@@ -52,6 +52,8 @@
     box-shadow: inset 0px 0px 5px rgba(0,0,0,0.3)
   .fc-event-inner
     border-color: inherit
+    width: auto
+    padding-left: 3px
 
   .fc-event-time
     font-weight: bold
