--- a/app/views/context/new_roster_user.html.erb
+++ b/app/views/context/new_roster_user.html.erb
@@ -6,13 +6,9 @@
 <% content_for :page_title do %><%= join_title context_user_name(@context, @user), @context.name %><% end %>
 
 <% content_for :right_side do %>
-  <h2><%= context_user_name(@context, @user) %></h2>
   <div class="rs-margin-rl" id="right_nav">
     <% if can_do(@membership, @current_user, :read_grades) && @membership.is_a?(StudentEnrollment) %>
       <a class="button button-sidebar-wide" href="<%= context_url(@context, :controller => :gradebooks, :action => :grade_summary, :id => @user.id) %>"><%= image_tag "grading_icon.png" %> <%= t 'links.user_grades', "Grades for %{user}", :user => context_user_name(@context, @user) %></a>
-    <% end %>
-    <% if can_do(@context, @current_user, :send_messages) %>
-      <a class="button button-sidebar-wide" href="<%= message_user_path(@user) %>"><%= image_tag "email.png" %> <%= t 'links.message_user', "Message %{user}", :user => context_user_name(@context, @user) %></a>
     <% end %>
     <% if @domain_root_account.enable_user_notes and can_do(@user, @current_user, :read_user_notes) %>
       <a href="<%= user_user_notes_path(@user) %>" class="button button-sidebar-wide"> <%= t 'links.faculty_journal', "Faculty Journal for %{user}", :user => context_user_name(@context, @user) %></a>
@@ -35,52 +31,15 @@
     <% end %>
   </div>
   <a href="<%= user_profile_path(@current_user) %>" class="profile_url" style="display: none;">&nbsp;</a>
-  <h2><%= t 'headings.user_services', "%{user}'s Services", :user => @user.short_name %></h2>
-  <div class="rs-margin-lr">
-    <% if can_do(@membership, @current_user, :read_services) && !@membership.user.user_services.empty? %>
-      <p>
-      <% @membership.user.user_services.each do |service| %>
-        <a href="<%= service.service_user_link %>" title="<%= service.service.titleize rescue 'Unknown' %>" class="no-hover"><%= image_tag "#{service.service}_icon.png" %></a>
-      <% end %>
-      </p>
-    <% else %>
-      <% if !@membership.user.user_services.empty?  %>
-        <p>
-          <%= t 'services_not_visible', "%{user}'s registered services are not visible to you at this time.", :user => @user.short_name %>
-        </p>
-      <% else %>
-        <p>
-          <%= t 'no_services', "%{user} hasn't linked any external services to their account yet.", :user => @user.short_name %>
-        </p>
-      <% end %>
-    <% end %>
-    <% if @current_user && @current_user == @user && @current_user.user_services.empty? %>
-      <p>
-        <%= t 'help.services', %{You haven't linked your user profile to any external services. You can link your Canvas account to services like Facebook and Twitter. This will make it easier for fellow course and group members to link up with you outside of class.} %>
-      </p>
-      <p>
-        <a href="<%= user_profile_path(@current_user) %>#registered_web_services" class="button"><%= t('links.link_services', %{Link web services to my account}) %></a>
-      </p>
-    <% elsif @current_user && @current_user == @user && !@current_user.show_user_services %>
-      <p>
-        <%= t 'help.list_services', %{You haven't enabled your list of registered services. Enabling this list will let fellow course and group members more easily link up with you outside of class.} %>
-      </p>
-      <p>
-        <input type="checkbox" id="show_user_services" class="show_user_services_checkbox"/><label for="show_user_services"><%= t('labels.public_list_services', %{Let fellow course/group members see which services I've linked to my profile}) %></label>
-      </p>
-    <% end %>
-  </div>
 <% end %>
 
 <% js_bundle :user_name %>
 <% jammit_css :roster_user %>
 
-<h2><%= t 'headings.users_details', "%{user}'s Details", :user => @user.short_name %></h2>
+<%= render :partial => 'shared/profile' %>
+
 <% if can_do(@context, @current_user, :manage_students) && !@context.is_a?(Group)%>
-<h2><%= t('headings.user_details', %{User Details}) %></h2>
-<%= render :partial => 'users/name' %>
-<a href="#" class="more_user_information_link"><%= t('links.more_user_details', %{more user details...}) %></a>
-<div class="more_user_information" style="display: none;">
+<div class="more_user_information">
   <% if @context.is_a?(Course) %>
     <fieldset>
       <legend><%= t('legends.memberships', %{Membership(s)}) %></legend>
@@ -148,24 +107,6 @@
   <% end %>
   <%= render :partial => 'users/logins' %>
 </div>
-<div style="margin-bottom: 10px;">&nbsp;</div>
-<% elsif service_enabled?(:avatars) %>
-  <div style="margin-bottom: 20px;">
-    <span class="avatar_image"><img src="<%= @user.avatar_url(50, @domain_root_account && @domain_root_account.settings[:avatars], "http://#{request.host_with_port}/images/dotted_pic.png") %>"/></span>
-    <% if can_do(@user, @current_user, :remove_avatar) %>
-      <a href="#" class="remove_avatar_picture_link"><%= t('links.remove_avatar', %{Remove avatar picture}) %></a>
-    <% else %>
-      <a href="#" class="report_avatar_picture_link"><%= t('links.report_avatar', %{Report inappropriate picture}) %></a>
-    <% end %>
-  </div>
-<% end %>
-
-<h2><%= t('headings.recent_messages', %{Recent Messages}) %></h2>
-<%= t('no_messages', "No Messages") if @messages.empty? %>
-<% @messages[0,10].each do |message| %>
-  <% if message.is_a?(DiscussionEntry) %>
-    <%= render :partial => 'discussion_topics/entry', :object => message, :locals => {:out_of_context => true, :show_context => true} %>
-  <% end %>
 <% end %>
 
 <% js_block do %>
@@ -243,11 +184,6 @@ $(document).ready(function() {
         $(this).closest('.enrollment').hide();
       }
     });
-  });
-  $(".more_user_information_link").click(function(event) {
-    event.preventDefault();
-    $(".more_user_information").slideDown();
-    $(this).hide();
   });
 });
 });
