get rid of blue border on grade2 header column drop
instead of this: http://cl.ly/image/361O3u3A0Z3U

Change-Id: Iecd860a4477909e0da952b728250e9f72203942e
this: http://cl.ly/image/0O3Z1x1T1W0a
Reviewed-on: https://gerrit.instructure.com/12808
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Mark Ericksen <marke@instructure.com>

--- a/app/stylesheets/gradebook2.sass
+++ b/app/stylesheets/gradebook2.sass
@@ -114,6 +114,10 @@ $cell_height: 33px
     right: 3px
     text-indent: 999px
     +opacity(0)
+
+    //override jqueryui blue border
+    border: 0 none
+
     &:hover, &.ui-menu-trigger-menu-is-open
       background-position: bottom left
       +opacity(1)
